# EDUS_2.0

./: .buildinfo  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README  README.md  genindex.html  index.html  main.cpp  objects.inv  search.html  searchindex.js
Postproces/: Absorbance.py  Collect_absorbance.py  Current.py  EDUS_hdf5_parser.ipynb  HHG.py  Recap.py  RytovaKeldysh.py  gen_config.py  read_H.py  read_X0.py  read_wf.py
Postproces/custom_functions/: Info_making.py  absorbance.py  basis.py  exp_manager.py  fouriertransform.py  high_harmonics.py  plottingExp.py  read.py  window.py
_sources/: index.rst.txt
_sources/tutorials/: intro.md.txt
ci-test/: Matrix_test.cpp  Newton.cpp  _____TODO______test_readWannier.cpp  compare.py  test_Coulomb.cpp  test_DEsolver.cpp  test_DEsolver2.cpp  test_Gradient.cpp  test_Gradient_R.cpp  test_Matrix.cpp  test_MultiIndex.cpp  test_NEQ_Grad.cpp  test_NEQ_H0.cpp  test_NEQpop.cpp  test_NEQpop1.cpp  test_NEQpop2.cpp  test_NEQpop3.cpp  test_RK.cpp  test_RK2.cpp  test_Rabi.cpp  test_Response.cpp  test_RytovaKeldysh.cpp  test_Simulation.cpp  test_Struve.cpp  test_TrivialHamiltonian.cpp  test_bandstructure.cpp  test_eigen.cpp  test_fft+gradient.cpp  test_fft+gradient_mpi.cpp  test_fft.cpp  test_fft2.cpp  test_fft_many.cpp  test_fft_mpi.cpp  test_laser.cpp  test_matrix.cpp  test_mdarray.cpp  test_overhead.cpp  test_pseudoinverse.cpp  test_simulation.cpp  test_trivialbands.cpp
ci-test/Reference/: BANDSTRUCTURE.txt  Struve.txt
ci-test/inputs/: MoS2.json  MoS2.json.in  Si.json  WSe2.json  example.json  hBN.json.in  hBN_coulomb.json.in  input_NonEQ_Grad.json.in  simulation.json
cmake/modules/: FindFFTW.cmake  Findfftw3.cmake
docs/source/: conf.py  index.rst
header/: Constants.hpp  ConvertUnits.cpp  ConvertUnits.hpp  Makefile  StreamFile.hpp  a.out
header/Geometry/: CMakeLists.txt  Coordinate.cpp  Coordinate.hpp  Geometry.cpp  Geometry.hpp  Matrix.cpp  Matrix.hpp  Matrix_definitions.hpp  Vector.cpp  Vector.hpp  Vector_definitions.hpp  a.out  main.cpp  test_eigen.cpp
header/Json/: json.cpp
header/Laser/: Laser.cpp  Laser.hpp  Laser_definitions.hpp  main.cpp
header/LinearAlgebra/: gemm.hpp
header/MeshGrid/: :wq  MeshGrid.cpp  MeshGrid.hpp  MeshGrid_definitions.hpp  a.out  main.cpp  trypath.cpp
header/Model/: BANDSTRUCTURE.txt  CMakeLists.txt  Model.hpp  Output.txt  README  a.out  bandstructure.cpp  main.cpp
header/Model/.ipynb_checkpoints/: PrintWannier-checkpoint.ipynb
header/Operator/: BlockMatrix.cpp  BlockMatrix.hpp  BlockMatrix_definitions.hpp  CMakeLists.txt  Operator.hpp  TestBandIndex.cpp  Testfft.cpp  a.out
header/Profile/: profiler.hpp
header/RungeKutta/: RungeKutta.hpp
header/Simulation/: Functionals.hpp  R.txt  Simulation.cpp  Simulation.hpp  Untitled.ipynb  a.out  k.txt  main.cpp
header/TimeGrid/: TimeGrid.hpp  a.out
header/Wannier/: PrintWannier.hpp  ReadWannier.cpp  ReadWannier.hpp  Wannier.hpp  a.out  main.cpp
header/core/: print_timing.hpp  profiler.cpp  profiler.hpp
header/fftPair/: a.out  fftPair.cpp  fftPair.hpp  main.cpp
header/mdContainers/: mdContainers.cpp  mdContainers.hpp
html/: Coulomb_8cpp.html  Coulomb_8cpp__incl.map  Coulomb_8cpp__incl.md5  Coulomb_8hpp.html  Coulomb_8hpp__dep__incl.map  Coulomb_8hpp__dep__incl.md5  Coulomb_8hpp__incl.map  Coulomb_8hpp__incl.md5  Coulomb_8hpp_source.html  Functional__InitialCondition_8hpp.html  Functional__InitialCondition_8hpp__dep__incl.map  Functional__InitialCondition_8hpp__dep__incl.md5  Functional__InitialCondition_8hpp_source.html  Functional__SourceTerm_8hpp.html  Functional__SourceTerm_8hpp__dep__incl.map  Functional__SourceTerm_8hpp__dep__incl.md5  Functional__SourceTerm_8hpp_source.html  ModelCoulomb_8cpp.html  ModelCoulomb_8cpp__incl.map  ModelCoulomb_8cpp__incl.md5  ModelCoulomb_8hpp.html  ModelCoulomb_8hpp__dep__incl.map  ModelCoulomb_8hpp__dep__incl.md5  ModelCoulomb_8hpp__incl.map  ModelCoulomb_8hpp__incl.md5  ModelCoulomb_8hpp_source.html  Simulation_8cpp.html  Simulation_8cpp__incl.map  Simulation_8cpp__incl.md5  Simulation_8hpp.html  Simulation_8hpp__dep__incl.map  Simulation_8hpp__dep__incl.md5  Simulation_8hpp__incl.map  Simulation_8hpp__incl.md5  Simulation_8hpp_source.html  Simulation__definitions_8hpp.html  Simulation__definitions_8hpp__dep__incl.map  Simulation__definitions_8hpp__dep__incl.md5  Simulation__definitions_8hpp_source.html  annotated.html  (+30 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  related_0.js  searchdata.js  (+10 more)
potentials/KCW/: KCWbarecoulomb_plusconstant_notnegative.txt  KCWbarecoulomb_plusconstant_notnegative_link.txt  KCWscreencoulomb_notnegative.txt  KCWscreencoulomb_notnegative_link.txt  KCWscreencoulomb_plusconstant_notnegative.txt  KCWscreencoulomb_plusconstant_notnegative_link.txt  barecoulomb_plusconstant.txt  barecoulomb_plusconstant_link.txt  barecoulomb_withoutconstant.txt  barecoulomb_withoutconstant_link.txt  screencoulomb.txt  screencoulomb_link.txt  screencoulomb_setto0.txt  screencoulomb_setto0_link.txt
potentials/Michael/: WSe2_michaels_barecoulomb_link.txt  WSe2_michaels_screencoulomb_link.txt
spack/: repo.yaml
speed-apps/: BlockMatrix_multiplication.cpp  FourierTransform.cpp  Matrix_multiplication.cpp
src/: BSE.cpp  Constants.hpp  ConvertUnits.cpp  ConvertUnits.hpp  EDUS.cpp  GlobalFunctions.cpp  GlobalFunctions.hpp  StreamFile.cpp  StreamFile.hpp  initialize.cpp  initialize.hpp  ostream.cpp  ostream.hpp
src/Adams-Bashforth/: Adams-Bashforth.hpp
src/AdamsBashforth/: AdamsBashforth.hpp
tutorials/: hBN_IPA_AND_HSEX.html  intro.html  step1_install.html  step2_input.html  step3_runsimulation.html
utility/: laser.py
(+123 files in other folders)
